--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "publish": "firebase deploy"
   },
   "dependencies": {
+    "firebase": "^12.8.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
