--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "publish": "firebase deploy"
+    "publish": "firebase deploy",
+    "deploy": "vite build && firebase deploy"
   },
   "dependencies": {
     "firebase": "^12.8.0",
